--- a/style.css
+++ b/style.css
@@ -94,19 +94,17 @@ header p {
   color: hsl(208, 49%, 24%);
   margin-top: 100px;
   font-size: 1.85em;
-}
-.section1 {
-  background-image: url(images/illustration-editor-mobile.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-position: 0% 70px;
   padding: 0px 30px;
 }
-.section1 .detailing:nth-of-type(2) {
-  margin-bottom: 70%;
+.section1 .detailing {
+    padding: 0px 30px;
 }
-.section1 h3:nth-of-type(1) {
-  margin-top: 110%;
+.illustration-editor img {
+    width: 100%;
+    margin: 30px 0px;
+}
+.section1 .detailing:nth-of-type(2) {
+  margin-bottom: 60%;
 }
 
 .section2 h2 {
